como parte de los cambios del ticket-182 se actualizo la version a java 8 para las instancias de comunicaciones, en esta version no existe soporte para algunas opciones de configuracion de la JVM (PermSize y UseStringCache) por lo que se retiran estas del archivo de arranque